v0.10.0: HttpClient + TLS toggle, Settings adds Test/Fetch buttons, dry-run on Benutzer
Four user-visible changes plus one bug fix.

1. **Bug fix: "no WWW-Authenticate header" on Test Verbindung.**
   Java HttpURLConnection consults the global java.net.Authenticator
   (which Jameica installs for proxy/SSO concerns) on a 401 response.
   It eats the WWW-Authenticate challenge header before our manual
   digest code can read it. Switching the HTTP layer to
   java.net.http.HttpClient (JDK 11+) sidesteps this — HttpClient
   doesn't consult the default Authenticator.

2. **TLS verify toggle.** New HikvisionSettings.getVerifySsl() (default
   off, since the DS-K controller ships with a self-signed cert).
   When false, the HttpClient is built with a trust-all SSL context;
   when true, default validation applies. Exposed as a checkbox on the
   Settings tab.

3. **Test Verbindung + Gruppen+Türrechte laden buttons in Settings.**
   The two diagnostic actions live where the user is configuring —
   so a complete config flow (URL → user → password → Test → Fetch →
   pick groups from dropdown → save) is doable in a single Settings
   dialog session. Test Verbindung removed from the Benutzer view.

4. **Dry-run checkbox moved to Benutzer view, next to Sync.** Each
   click on Sync / Import reads the current checkbox state. The
   underlying HikvisionSettings.dryRun is still persisted (so the
   user's choice survives restarts), but the checkbox lives next to
   the action it modifies, not buried in Settings.

Plus: SyncEngine.computePlan / run / importFromHikvision signatures
now take the top-level ProgressListener (the SyncEngine.ProgressListener
sub-interface kept as a compile-time alias). Cleans up an awkward
inner-interface vs top-level type clash when other classes wanted to
construct listeners.